1.8
---

- Fixes issue #10: Add a new route to query for users presence
  * route url is /pyvac/off
  * can be filtered by date (default today) /pyvac/off?date=20151224
  * can be filtered by name (can be partial) /pyvac/off?name=peter
  * can be filtered by nickame (LDAP uid field) (can be partial) /pyvac/off?nick=spiderman
- Fixes UTC issue on calendar not displaying colors properly

1.7
---

- Add new vacation type: Recovery
  * Work as others requests type but is excluded from export
- Add holiday feature:
  * Display holidays dates in calendar regarding user country
  * Theses dates cannot be selected
    - they will be substracted from requests when requesting a period including an holiday
    - requests will now have a duration of days equal to the real working dates
  * Holidays data retrieved from workalendar package
- Fixes issue #6: Request list view splitted:
  * Split the view in 2 tab: past and next requests splitted on current date
  * Conflicts are only computed for next requests to reduce the page load
  * Past requests tab have less columns: action, conflict and notified has been removed
- Fixes issue #9: Show user vacation in the home calendar
  * Add color code to calendar for:
    - pending/accepted_manager requests
    - approved_admin requests
  * Theses dates cannot be selected, so user cannot request multiple times the same period
- Fixes bug: conflicts were not working properly in non LDAP mode
- Fixes bug: conflicts should not include DENIED requests

1.6
---

- Add Sudo feature to enable a user to have access to another user account:
  * New Sudoer table
  * Login will redirect to Sudo view if sudoers available for logged user
  * Sudo view is restricted by user permissions
  * Update install script to initialize DB with new sudo permissions
- Improve logging in worker and various helper: request actions, mail sent and calendar add.
- Creating a request using admin sudo option now also add request to calendar.